What's new...

Feb 2/2024 : JF/51.0
 - implement H.265 codec
 - implement RTSPServer
 - jfDVR/0.13
   - add RTSPServer to view cameras
   - add high/low res URLs
   - add camera groups
   - add camera/group viewer (with CLI for kiosks)
 - jfMedia/0.17
   - now supports H.265
 - jfPhone/1.26
   - now supports H.265

Jan 22/2024 : JF/50.1
 - fix RTSP compatibility issue
 - jfMedia/0.16

Jan 21/2024 : JF/50.0
 - jfMedia : added RTSP support
 - jfMedia/0.15

Jan 15/2024 : JF/49.0
 - to improve linux services a unix socket is created to send commands to the service.
   - the "stop" command is sent to gracefully stop the service
 - unix sockets require Java 16 so the minimum version has been bumped to JDK 17
     which is the next LTS release
 - all services in javaforce.service.* were renamed to include "Server" to avoid
     confusion with the client names in javaforce.*
 - new : javaforce.HTML
   - misc functions to generate HTML code

Nov 17/2023 : JF/48.1
 - fix linux/arm64 support

Nov 6/2023 : JF/48.0
 - VoIP : add instant MESSAGE support
   - jfPhone/1.25
   - jfPBX/0.33
 - fix linux packaging

Oct 12/2023 : JF/47.0
 - upgrade to ffmpeg/5.1.x
 - jfAudio/0.21
   - fixed recording issue
 - misc fixes

Oct 6/2023 : JF/46.0
 - Oracle will deprecate using JNI thru System.load() (see JEP draft 8307341)
   - a new java cli tool was created for running JF apps from command line (/bin/jfexec) to replace using java.exe
   - System.load() is no longer used
   - the jfnative64.* library is no longer created (it's code is bundled into native loaders)
   - use "ant run" to test/debug apps
 - /stubs has been merged into /native
 - added javaforce.UByte, UShort, UInteger and ULong

Sept 22/2023 : JF/45.2
  - fix : SMTP MIME encoding needed more blank lines

Sept 15/2023 : JF/45.1
  - new : DNS now support PTR records
  - new : added Controller.setTimeout()
  - new : added JFLog.rotate() and setMaxFilesize()
  - new : added javaforce.JF.grep() and javaforce.utils.grep
