@@ -1,7 +1,7 @@
 <project xmlns:if="ant:if" xmlns:unless="ant:unless">
   <!-- Note : any changes should be reflected in lib/package.sh -->
   <!-- JavaForce version -->
-  <property name="javaforce-version" value="51.0"/>
+  <property name="javaforce-version" value="52.0"/>
   <!-- native dependancies versions -->
   <property name="glfw-version" value="3.3.1"/>
   <property name="ffmpeg-version" value="5.1.2"/>
