@@ -1,5 +1,14 @@
 What's new...
 
+Feb 17/2024 : JF/52.0
+ - jfDVR/0.14
+   - fix config issues
+   - fix service shutdown
+   - fix viewer/decoder
+ - jfMedia/0.18
+   - add fullscreen function
+ - cleanup native loader
+
 Feb 2/2024 : JF/51.0
  - implement H.265 codec
  - implement RTSPServer
